# vehicle-insurance-end-to-end-ml

./: .env.example  README.md  notes.md  project_flow.txt  pyproject.toml  template.py
backend/: app.py  config.py  demo.py
backend/forms/: __init__.py  vehicle_form.py
backend/routes/: predict.py  train.py
backend/services/: prediction_service.py
frontend/templates/: vehicledata.html
notebook/: mongoDB_demo.ipynb  mongoDB_demo.ipynb.ipynb
src/cloud_storage/: __init__.py  aws_storage.py
src/components/: __init__.py  data_ingestion.py  data_transformation.py  model_evaluation.py  model_pusher.py
src/configuration/: __init__.py  aws_connection.py  mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: __init__.py  proj_data.py
src/entity/: __init__.py  config_entity.py  s3_estimator.py
src/exception/: __init__.py  exception.py
src/pipeline/: __init__.py  prediction_pipeline.py  training_pipeline.py
