[project]
name = "vehicle_insurance_end_to_end_ml"
version = "0.1.0"
description = "An MLOps project for productionizing models"
requires-python = ">=3.10"
authors = [{ name = "Dhruv Kapri" }]

dependencies = [
    "ipykernel",
    "python-dotenv",
    "pandas",
    "numpy",
    "matplotlib",
    "plotly",
    "seaborn",
    "scikit-learn",
    "pymongo",
    "from_root",
    "dill",
    "certifi",
    "PyYAML",
    "boto3",
    "mypy-boto3-s3",
    "botocore",
    "fastapi",
    "python-multipart",
    "uvicorn",
    "jinja2",
    "imblearn",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
